--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -36,5 +36,5 @@ msg5 <- "Not it! Use `dim()` fucntion to display the data frames dimensions."
 test_mc(4, feedback_msgs = c(msg1, msg2, msg3, msg4, msg5))
 ```
 *** =attachments
-.Rmd: http://s3.amazonaws.com/assets.datacamp.com/production/course_1126/datasets/student_lab_code_test.Rmd
+lab1.Rmd: http://s3.amazonaws.com/assets.datacamp.com/production/course_1126/datasets/student_lab_code_test.Rmd
 
