--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -22,7 +22,7 @@ Remember the `|` operator allows you to filter for more than one variable.
 ```{r,eval=FALSE}
 library(dplyr)
 library(ggplot2)
-
+file.edit("~/lab1.Rmd")
 ```
 
 *** =sct
