--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -23,6 +23,7 @@ Remember the `|` operator allows you to filter for more than one variable.
 library(dplyr)
 library(ggplot2)
 file.edit("~/lab1.Rmd")
+print("hello world")
 ```
 
 *** =sct
