Try Rstudio mult choice

--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -38,3 +38,36 @@ test_mc(4, feedback_msgs = c(msg1, msg2, msg3, msg4, msg5))
 *** =attachments
 lab1.Rmd: http://s3.amazonaws.com/assets.datacamp.com/production/course_1126/datasets/student_lab_code_test.Rmd
 
+--- type:RStudioMultipleChoiceExercise xp:50 skills:1
+ 
+## Executing code
+To execute code that is written in your text editor, you can highlight the text and hit which two buttons on a Mac and PC, respectively? Try to execute the code in the script if you are unsure!
+ 
+*** =instructions
+- 'Command + down arrow' or 'Control + down arrow'
+- 'Command + shift' or 'Control + shift'
+- 'Command + enter' or 'Control + enter'
+- 'Command + up arrow' or 'Control + up arrow'
+ 
+*** =hint
+Try using each option above to execute the code in the console. Which one works?
+ 
+*** =pre_exercise_code
+```{r,eval=FALSE}
+# What does 4 + 4 equal?
+4 + 4
+# What does 2 - 5 equal?
+2 - 5
+```
+ 
+*** =sct
+```{r,eval=FALSE}
+msg1 <- "Hmm, not correct. Try to execute the code in the editor with each option."
+msg2 <- "Hmm, not correct. Try to execute the code in the editor with each option."
+msg3 <- "Nice! This is a quick and easy way to execute code in your text editor!"
+msg4 <- "Hmm, not correct. Try to execute the code in the editor with each option."
+test_mc(3, feedback_msgs = c(msg1, msg2, msg3, msg4))
+```
+ 
+*** =attachments
+.Rhistory: https://drive.google.com/file/d/0B4i1NR6IGIqeWExyaG1MU1NIMEE/view?usp=sharing
